fix overlaping on contact page

--- a/app/public/style/submit.css
+++ b/app/public/style/submit.css
@@ -1,52 +1,49 @@
-main{
-    height: 100%;
+.error_main {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	font-size: 25px;
+	text-align: center;
 }
-.error_main{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    font-size: 25px;
-    text-align: center;
-}
-.error_button{
+.error_button {
 	padding: 0.75rem 1.5rem;
 	background: #51b2a2;
 	border: 0;
 	color: #1e407a;
 	font-family: 'Nexa-Bold';
-    width: 150px;
+	width: 150px;
 	border-radius: 3rem;
-    margin: 15px;
+	margin: 15px;
 }
-.success{
-    text-align: center;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 100%;
+.success {
+	text-align: center;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	height: 100%;
 }
-.success>h1{
-    font-family: Nexa-Bold;
-    font-size: 96px;
+.success > h1 {
+	font-family: Nexa-Bold;
+	font-size: 96px;
 }
-@media (max-width: 1790px){
-    .success{
-        margin: 145px;
-    }
+@media (max-width: 1790px) {
+	.success {
+		margin: 145px;
+	}
 }
-@media (max-width: 1080px){
-    .success>h1{
-        font-size: 70px;
-    }
+@media (max-width: 1080px) {
+	.success > h1 {
+		font-size: 70px;
+	}
 }
-@media (max-width: 760px){
-    .success>h1{
-        font-size: 55px;
-    }
+@media (max-width: 760px) {
+	.success > h1 {
+		font-size: 55px;
+	}
 }
-@media (max-width: 655px){
-    .success>h1{
-        font-size: 45px;
-    }
+@media (max-width: 655px) {
+	.success > h1 {
+		font-size: 45px;
+	}
 }
